--- a/public/style.css
+++ b/public/style.css
@@ -8,8 +8,16 @@ body {
   bottom: 0;
   left: 0;
   right: 0;
+  background-color: rgb(243, 233, 217);
 }
-
+.game-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+  flex: 1;
+  margin: 10px 0;
+}
 .line,
 .pieces,
 .targets-container {
@@ -18,7 +26,6 @@ body {
   align-items: center;
 }
 
-.line,
 .pieces {
   margin: 20px 0;
 }
@@ -45,7 +52,6 @@ body {
   height: 20px;
   margin: 0 5px;
   border-radius: 50%;
-  filter: drop-shadow(0px 0px 10px rgba(29, 29, 29, 0.445));
 }
 
 .red-indicator {
@@ -68,7 +74,6 @@ body {
   height: 40px;
   border-radius: 50%;
   background-color: rgba(0, 0, 0, 0.329);
-  filter: drop-shadow(0px 0px 10px rgba(29, 29, 29, 0.445));
   margin: 0 10px;
 }
 
@@ -102,7 +107,7 @@ button:hover {
 }
 
 .yellow {
-  background-color: yellow;
+  background-color: rgb(240, 240, 36);
 }
 
 .white {
