--- a/public/style.css
+++ b/public/style.css
@@ -10,7 +10,7 @@ body {
   right: 0;
   background-color: rgb(243, 233, 217);
 }
-.game-container {
+#game-container {
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
@@ -75,6 +75,13 @@ body {
   border-radius: 50%;
   background-color: rgba(0, 0, 0, 0.329);
   margin: 0 10px;
+}
+
+.target,
+.piece,
+.red-indicator,
+.white-indicator {
+  filter: drop-shadow(0px 0px 5px rgba(49, 49, 49, 0.377));
 }
 
 .piece {
