--- a/public/style.css
+++ b/public/style.css
@@ -88,6 +88,12 @@ body {
   cursor: pointer;
 }
 
+.button-container {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+}
 button {
   border: none;
   background-color: black;
@@ -97,6 +103,11 @@ button {
   font-weight: bold;
   cursor: pointer;
   transition: all ease 200ms;
+  margin: 0 10px;
+}
+
+#restart {
+  background-color: red;
 }
 
 button:hover {
