feat(script): remove color if target is clicked

--- a/src/style/global.css
+++ b/src/style/global.css
@@ -92,6 +92,10 @@ body {
   cursor: pointer;
 }
 
+.current-target {
+  cursor: pointer;
+}
+
 .button-container {
   display: flex;
   flex-wrap: wrap;
