--- a/src/style/global.css
+++ b/src/style/global.css
@@ -200,19 +200,19 @@ button:hover {
   align-items: center;
 }
 
-#parameters{
+#parameters {
   display: flex;
   position: fixed;
   top: 5%;
   right: 5%;
 }
 
-#parameterLogo{
+#parameterLogo {
   width: 50px;
   height: 50px;
 }
 
-#parametersPopup{
+#parametersPopup {
   display: none;
   flex-direction: column;
   align-items: center;
@@ -224,13 +224,18 @@ button:hover {
   height: 200px;
   position: absolute;
 }
-#nbTurns,#duplicate,#nbColors,#nbPossibilities{
+#nbTurns,
+#duplicate,
+#nbColors,
+#nbPossibilities {
   display: flex;
   color: aliceblue;
   font-size: 20px;
   font-weight: bold;
 }
-#nbTurnsValue,#nbPossibilitiesValue,#nbColorsValue{
+#nbTurnsValue,
+#nbPossibilitiesValue,
+#nbColorsValue {
   max-width: 40px;
   margin-left: 10px;
 }
