--- a/src/style/global.css
+++ b/src/style/global.css
@@ -152,8 +152,7 @@ button:hover {
   background-color: maroon;
 }
 
-#win,
-#loose {
+.popup {
   position: fixed;
   top: 0;
   bottom: 0;
@@ -212,8 +211,7 @@ button:hover {
   height: 50px;
 }
 
-#parametersPopup {
-  display: none;
+.paramsPopUp {
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
@@ -222,7 +220,7 @@ button:hover {
   box-shadow: 2px 2px 2px 1px black;
   width: 400px;
   height: 200px;
-  position: absolute;
+  display: flex;
 }
 #nbTurns,
 #duplicate,
