--- a/src/style/global.css
+++ b/src/style/global.css
@@ -120,6 +120,25 @@ body {
   filter: drop-shadow(0px 0px 7px rgba(0, 0, 0, 0.25));
 }
 
+@keyframes glowing {
+  0% {
+    box-shadow: 0 0 -10px #ff1100 inset;
+  }
+  40% {
+    box-shadow: 0 0 20px #ff1100 inset;
+  }
+  60% {
+    box-shadow: 0 0 20px #ff1100 inset;
+  }
+  100% {
+    box-shadow: 0 0 -10px #ff1100 inset;
+  }
+}
+
+.alert {
+  animation: glowing 500ms 3 ease-in-out;
+}
+
 .piece {
   cursor: pointer;
 }
